--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
     <title>Your Website Title</title>
     <meta name="description" content="A brief description of your website">
     <!-- Add more meta tags, links to stylesheets, or scripts here -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
